# Solana-arb-bot

./: .gitignore  AGENTS.md  BUILD.bat  BUILD_GUIDE.md  CI_CD_SETUP.md  CODE_REVIEW.md  Cargo.toml  Cargo.toml.fix  DELIVERY_MANIFEST.md  PATH_B_COMPLETE_GUIDE.md  PHASE_2_IMPLEMENTATION_GUIDE.md  PHASE_2_PROGRESS.md  PROGRESS.md  README.md  TESTING_AND_DEPLOYMENT.md  UI_INTEGRATION_GUIDE.md  build.rs  push-to-github.ps1  tauri.conf.json
.github/workflows/: build-release.yml  release.yml  rust-build.yml
capabilities/: default.json
src-tauri/frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/frontend/src/: App.css  App.tsx  index.css  index.html  main.tsx
src-tauri/frontend/src/components/: ConfigPanel.tsx  ExecutionPanel.tsx  PairMatrix.tsx  ProfitDashboard.tsx  StreamStatus.tsx  TradeJournal.tsx
src-tauri/frontend/src/styles/: ConfigPanel.css  PairMatrix.css  StreamStatus.css  TradeJournal.css
src/backend/: main.rs
src/backend/engine/: mod.rs
src/backend/execution/: atomic_swap.rs  error_recovery.rs  mod.rs  slippage.rs  transaction_signer.rs  validated_execution.rs
src/backend/flash_loan/: fee_calculator.rs  mod.rs
src/backend/ipc/: mod.rs
src/backend/jito/: client.rs  connection_pool.rs  mod.rs  tip.rs
src/backend/keypair/: mod.rs  vault_integration.rs
src/backend/parsers/: mod.rs
src/backend/rpc/: config.rs  mod.rs
src/backend/streaming/: mod.rs
src/backend/swap/: mod.rs
src/backend/validation/: gap_thresholds.rs  mod.rs
src/backend/vault/: mod.rs
tests/: integration_tests.rs
